[metadata]
name = bluecatopenstack
summary = Bluecat Networks Openstack Drivers
description-file = README.md
author = B.Shorland
version = 0.1
license = Apache-2
author-email = bshorland@bluecatnetworks.com
home-page = https://github.com/indigo360/bluecat-openstack-drivers
classifier =
	Environment :: OpenStack
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Intended Audience :: System Administrators

[files]
packages = bluecatopenstack

[entry_points]
neutron.ipam_drivers = 
	bluecatopenstack = bluecatopenstack.ipam.drivers.neutrondb_ipam.driver:NeutronDbPool
